# Shared-App

./: .gitignore
0-hello-world/: readme.md
0-hello-world/Android/HelloWorld/app/: build.gradle
0-hello-world/Android/HelloWorld/app/src/main/: AndroidManifest.xml
0-hello-world/Android/HelloWorld/app/src/main/assets/: hello.js
0-hello-world/Android/HelloWorld/app/src/main/res/layout/: activity_main.xml
0-hello-world/Android/HelloWorld/gradle/wrapper/: gradle-wrapper.properties
0-hello-world/iOS/HelloWorld/HelloWorld/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m  main.m
0-hello-world/iOS/HelloWorld/HelloWorld.xcodeproj/: project.pbxproj
0-hello-world/iOS/HelloWorld/HelloWorld/Base.lproj/: Main.storyboard
1-http/: readme.md
1-http/Android/HTTPTest/: build.gradle
1-http/Android/HTTPTest/app/: build.gradle
1-http/Android/HTTPTest/app/src/main/: AndroidManifest.xml
1-http/Android/HTTPTest/app/src/main/assets/: downloader.js
1-http/Android/HTTPTest/app/src/main/res/layout/: activity_main.xml
1-http/Android/HTTPTest/gradle/wrapper/: gradle-wrapper.properties
1-http/Web/: index.html
1-http/iOS/HTTP Test/HTTP Test/: AppDelegate.h  AppDelegate.m  DelegateExport.h  HTTPExport.h  ViewController.h  ViewController.m  main.m
1-http/iOS/HTTP Test/HTTP Test.xcodeproj/: project.pbxproj
1-http/iOS/HTTP Test/HTTP Test/Base.lproj/: Main.storyboard
1-http/js/: downloader.js
Duktape-Example-C/: CMakeLists.txt  main.cpp
Duktape-Example-C/js/: file2.js  file3.js  file4.js  file5.js  sum.js  types.js
(+10 files in other folders)
